Devise forms generated with simple_form

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,12 +1,5 @@
-<p>Welcome!</p>
+<p>Welcome <%= @email %>!</p>
 
-<p>You need to confirm your account email through the link below:</p>
+<p>You can confirm your account email through the link below:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @token) %></p>
-<br/>
-
-<p>
- Thank you,<br/><br/>
-  Yourself<br/>
-  <%= link_to "Your URL", "#" %>
-</p>
+<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
