--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,31 +1,16 @@
-<div class="row">
-  <div class="col-sm-6 ">
-    <h1>Resend confirmation instructions</h1>
+<h2>Resend confirmation instructions</h2>
 
-    <%= form_for(resource, :as => resource_name, 
-    :url => confirmation_path(resource_name), 
-    :html => { :method => :post, :role => "form" }) do |f| %>
-  
-      <%= devise_error_messages! %>
+<%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+  <%= f.error_notification %>
+  <%= f.full_error :confirmation_token %>
 
-      <div class="form-group">
-        <%= f.label :email %>
-        <div class="row">
-          <div class="col-sm-6">      
-            <%= f.text_field :email, :autofocus => true, class: "form-control" %>  
-          </div>
-        </div>
-      </div>
-  
-      <div class="row">
-        <div class="col-sm-6">
-          <%= f.submit "Resend confirmation instructions", class: "btn btn-primary" %>
-        </div>
-      </div>    
-
-      <% end %>
-
-      <%= render "devise/shared/links" %>
-
-    </div>
+  <div class="form-inputs">
+    <%= f.input :email, required: true, autofocus: true %>
   </div>
+
+  <div class="form-actions">
+    <%= f.button :submit, "Resend confirmation instructions" %>
+  </div>
+<% end %>
+
+<%= render "devise/shared/links" %>
