--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,63 +1,27 @@
-<div class="row">
-  <div class="col-sm-6 ">
-    <h1>Edit your profile</h1>
+<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-    <%= form_for(resource, :as => resource_name, 
-    :url => registration_path(resource_name), 
-    :html => { :method => :put, role: "form" }) do |f| %>
-  
-      <%= devise_error_messages! %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <%= f.error_notification %>
 
-      <div class="form-group">
-        <%= f.label :email %>
-        <div class="row">
-          <div class="col-sm-6">      
-            <%= f.email_field :email, :autofocus => true, class: "form-control" %>  
-          </div>
-        </div>
-      </div>
+  <div class="form-inputs">
+    <%= f.input :email, required: true, autofocus: true %>
 
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div class="row">
-        <div class="col-sm-6">     
-          <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-        </div>
-      </div>
-      <% end %>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+    <% end %>
 
-      <div class="form-group">
-            <%= f.label :password %> <i><small>(leave blank if you don't want to change it)</small></i>
-        <div class="row">
-          <div class="col-sm-6">
-            <%= f.password_field :password, :autocomplete => "off", class: "form-control" %>
-          </div>
-        </div>
-      </div>
-
-      <div class="form-group">
-            <%= f.label :password_confirmation %>
-        <div class="row">
-          <div class="col-sm-6">
-            <%= f.password_field :password_confirmation, class: "form-control" %>
-          </div>
-        </div>
-      </div>
-
-      <div class="form-group">
-            <%= f.label :current_password %> <i><small>(we need your current password to confirm your changes)</small></i>
-        <div class="row">
-          <div class="col-sm-6">
-            <%= f.password_field :current_password, class: "form-control" %>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-6">
-          <%= f.submit "Update", class: "btn btn-primary" %> - <%= link_to "Cancel", inside_path %>
-        </div>
-      </div>    
- 
-      <% end %>
-    </div>
+    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
+    <%= f.input :password_confirmation, required: false %>
+    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
   </div>
+
+  <div class="form-actions">
+    <%= f.button :submit, "Update" %>
+  </div>
+<% end %>
+
+<h3>Cancel my account</h3>
+
+<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+<%= link_to "Back", :back %>
