--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,49 +1,17 @@
-<div class="row">
-  <div class="col-sm-6">
-    <h1>Sign up</h1>
+<h2>Sign up</h2>
 
-    <%= form_for(resource, :as => resource_name, 
-    :url => registration_path(resource_name), 
-    :html => { :role => "form" }) do |f| %>
-    
-      <%= devise_error_messages! %>
-    
-      <div class="form-group">
-        <%= f.label :email %>
-        <div class="row">
-          <div class="col-sm-6">      
-            <%= f.email_field :email, class: "form-control" %>  
-          </div>
-        </div>
-      </div>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= f.error_notification %>
 
-      <div class="form-group">
-        <div class="row">
-          <div class="col-sm-6">
-            <%= f.label :password %>
-            <%= f.password_field :password, class: "form-control" %>
-          </div>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="row">
-          <div class="col-sm-6">
-            <%= f.label :password_confirmation %>
-            <%= f.password_field :password_confirmation, class: "form-control" %>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-6">
-          <%= f.submit "Sign up", class: "btn btn-primary" %>
-        </div>
-      </div>    
-      <% end %>
-      
-
-      <%= render "devise/shared/links" %>
-
-    </div>
+  <div class="form-inputs">
+    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
+    <%= f.input :password_confirmation, required: true %>
   </div>
+
+  <div class="form-actions">
+    <%= f.button :submit, "Sign up" %>
+  </div>
+<% end %>
+
+<%= render "devise/shared/links" %>
