--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,7 +19,7 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <%= render 'layouts/navigation_links' %>
+        <%= render 'layouts/navbar_links' %>
       </ul>
     </div>
   </div>
