--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,10 +1,13 @@
-<h1>Listing projects</h1>
+<p id="notice"><%= notice %></p>
+
+<h1>Listing Projects</h1>
 
 <table>
   <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
+      <th>Editor pick</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +17,7 @@
       <tr>
         <td><%= project.name %></td>
         <td><%= project.description %></td>
+        <td><%= project.editor_pick %></td>
         <td><%= link_to 'Show', project %></td>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
