--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -1,85 +1,15 @@
-// ADDED: CUSTOM MIXINS & VARS
-@import "global-vars";
+@import "theme/variables";
+@import "theme/styles";
 
-// Core variables and mixins
+@import "bootstrap";
 
-//@import "bootstrap/variables";
-@import "../../bower_components/bootswatch-scss/yeti/variables";
+@import "base";
+@import "layout";
+@import "util";
 
-//
-// COPIED FROM BOOTSTRAP-SASS-OFFICIAL
-//
-// When true, asset path helpers are used, otherwise the regular CSS `url()` is used.
-// When there no function is defined, `fn('')` is parsed as string that equals the right hand side
-// NB: in Sass 3.3 there is a native function: function-exists(twbs-font-path)
-$bootstrap-sass-asset-helper: (twbs-font-path("") != unquote('twbs-font-path("")')) !default;
+@import "modules/forms";
+@import "modules/footer";
+@import "modules/hero";
+@import "modules/navbar";
+@import "modules/other";
 
-//** Load fonts from this directory. (GLYPHICONS - NOT USED ANYMORE)
-
-// [converter] Asset helpers such as Sprockets and Node.js Mincer do not resolve relative paths
-$icon-font-path: if($bootstrap-sass-asset-helper, "bootstrap/", "../fonts/bootstrap/") !default;
-
-@import "bootstrap/mixins";
-
-// Reset and dependencies
-@import "bootstrap/normalize";
-//@import "bootstrap/print";
-//@import "bootstrap/glyphicons";
-
-// import font-awesome from relative path (Bower) - works because in Grunt.js we've configured the libsass task with a
-// load path
-@import "../../bower_components/fontawesome/scss/font-awesome";
-
-// Core CSS
-@import "bootstrap/scaffolding";
-@import "bootstrap/type";
-@import "bootstrap/code";
-@import "bootstrap/grid";
-@import "bootstrap/tables";
-@import "bootstrap/forms";
-@import "bootstrap/buttons";
-
-// Components
-@import "bootstrap/component-animations";
-@import "bootstrap/dropdowns";
-@import "bootstrap/button-groups";
-@import "bootstrap/input-groups";
-@import "bootstrap/navs";
-@import "bootstrap/navbar";
-@import "bootstrap/breadcrumbs";
-@import "bootstrap/pagination";
-//@import "bootstrap/pager";
-@import "bootstrap/labels";
-//@import "bootstrap/badges";
-//@import "bootstrap/jumbotron";
-@import "bootstrap/thumbnails";
-@import "bootstrap/alerts";
-@import "bootstrap/progress-bars";
-@import "bootstrap/media";
-@import "bootstrap/list-group";
-@import "bootstrap/panels";
-@import "bootstrap/responsive-embed";
-//@import "bootstrap/wells";
-@import "bootstrap/close";
-
-// Components w/ JavaScript
-@import "bootstrap/modals";
-@import "bootstrap/tooltip";
-@import "bootstrap/popovers";
-//@import "bootstrap/carousel";
-
-// ADDED BOOTSWATCH HERE JUST BEFORE UTILITIES.LESS (see: http://www.dotkam.com/2012/07/06/integrating-font-awesome-with-bootswatch/)
-//@import "../../bower_components/bootswatch-scss/yeti/bootswatch";
-
-// Utility classes
-@import "bootstrap/utilities";
-@import "bootstrap/responsive-utilities";
-
-// ADDED: CUSTOM STYLES
-//@import "custom-railsbricks-styles";
-@import "global-styles";
-@import "util-styles";
-
-@import "hero-unit";
-@import "navbar";
-@import "footer";
