--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -1,5 +1,5 @@
 <%%= simple_form_for(@<%= singular_table_name %>) do |f| %>
-  <%%= f.error_notification %>
+  <%%= form_errors @<%= singular_table_name %> %>
 
   <div class="form-inputs">
   <%- attributes.each do |attribute| -%>
