Addition of gems (Pry etc), removal of RSpec gem, addition of Rack Deflater (HTTP response compression)

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,9 +9,23 @@
           <br/>
           Assembled with <%= link_to "RailsBricks", "http://www.railsbricks.net" %>
         </small></p>
+
+        <!--div id="share" class="clearfix">
+              <div id='tweet_button_container'>
+                <%#= tweet_button %>
+              </div>
+
+              <div id='facebook_button_container'>
+                <%#= like_button(450, true) %>
+              </div>
+        </div-->
+
       </div>
       
     </div>
     
   </div>
 </div>
+
+<%#= render 'layouts/twitter_js' %>
+<%#= render 'layouts/facebook_js' %>
