--- a/app/views/pages/bootstrap.html.erb
+++ b/app/views/pages/bootstrap.html.erb
@@ -24,7 +24,7 @@
 <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="../" class="navbar-brand"><span class="glyphicon glyphicon-home"></span> Bootswatch</a>
+          <a href="../../../vendor/assets" class="navbar-brand"><span class="glyphicon glyphicon-home"></span> Bootswatch</a>
 
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
