--- a/assets/stylesheets/_util.scss
+++ b/assets/stylesheets/_util.scss
@@ -1,5 +1,5 @@
 //
-// Utility styles
+// Some utility styles
 // --------------------------------------------------
 
 // utility styles with "!important"
