Hero unit: added project quickstart form; restructured translations (en.yml keys)

--- a/app/views/home/_selected_projects.html.erb
+++ b/app/views/home/_selected_projects.html.erb
@@ -1,7 +1,7 @@
 <div class="content-container">
   <div class="content-row">
     <div class="content-col text-center">
-      <h3><%= t(:project_picks) %></h3>
+      <h3><%= t('home.selected_projects.title') %></h3>
     </div>
   </div>
 </div>
