--- a/app/views/home/_hero_unit.html.erb
+++ b/app/views/home/_hero_unit.html.erb
@@ -5,12 +5,36 @@
       <div class="content-row">
         <div class="hero-banner">
 
-          <h1 class="big-slogan" data-sr="enter from the top and hustle 50px over 1.5s"><%= t(:slogan_html) %></h1>
-          <h3 class="small-slogan" data-sr="enter bottom wait 1s"><%= t(:subslogan_html) %></h3>
+          <h1 class="big-slogan" data-sr="enter from the top and hustle 50px over 1.5s"><%= t('home.hero_unit.slogan_html') %></h1>
+          <h3 class="small-slogan" data-sr="enter bottom wait 1s"><%= t('home.hero_unit.subslogan_html') %></h3>
 
           <div class="call-to-action">
-            <button class="call-to-action-btn" type="button"><%= t(:get_started) %>&nbsp;&nbsp;&nbsp;<i class="fa fa-arrow-circle-right"></i></button>
-            <%= link_to(t(:learn_more), nil, class: "text-primary") %>
+
+            <form class="form-inline">
+
+              <div class="form-group hidden-xs">
+                <label class="sr-only" for="title"><%= t('home.hero_unit.project_title_label') %></label>
+                <input type="text" class="form-control" id="title" placeholder="<%= t('home.hero_unit.project_title_placeholder') %>">
+              </div>
+
+              <div class="form-group hidden-xs">
+                <label class="sr-only" for="category">Category</label>
+                <select class="form-control" id="category">
+                  <option value="" selected>-select category-</option>
+                  <option value="animals">Animals</option>
+                  <option value="business">Business</option>
+                  <option value="community">Community</option>
+                  <option value="medical">Medical</option>
+                  <option value="personal">Personal</option>
+                  <option value="sports">Sports</option>
+                  <option value="third-world">Third World</option>
+                  <option value="other">-other/choose later-</option>
+                </select>
+              </div>
+
+              <button class="call-to-action-btn" type="button"><%= t('home.hero_unit.get_started') %>&nbsp;&nbsp;&nbsp;<i class="fa fa-arrow-circle-right"></i></button>
+            </form>
+
           </div>
 
         </div>
