Threw "simple_form" gem out again in favor of standard Rails form helpers

--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -5,3 +5,10 @@
 <p>Click the link below to unlock your account:</p>
 
 <p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<br/>
+
+<p>
+  Thank you,<br/><br/>
+  Yourself<br/>
+  <%= link_to "Your URL", "#" %>
+</p>
