--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Project</h1>
+<div class="row">
+  <div class="col-sm-6">
+    <h1>New Project</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', projects_path %>
+    <div class="row shared-links">
+      <div class="col-sm-8">
+        <%= link_to 'Back', projects_path %>
+      </div>
+    </div>
+  </div>
+</div>
