--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,31 @@
-<h2>Resend confirmation instructions</h2>
+<div class="row">
+  <div class="col-sm-6 ">
+    <h1>Resend confirmation instructions</h1>
 
-<%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_form_errors %>
-  <%= f.full_error :confirmation_token %>
+    <%= form_for(resource, :as => resource_name, 
+    :url => confirmation_path(resource_name), 
+    :html => { :method => :post, :role => "form" }) do |f| %>
+  
+      <%= devise_form_errors %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+      <div class="form-group">
+        <%= f.label :email %>
+        <div class="row">
+          <div class="col-sm-6">      
+            <%= f.text_field :email, :autofocus => true, class: "form-control" %>  
+          </div>
+        </div>
+      </div>
+  
+      <div class="row">
+        <div class="col-sm-6">
+          <%= f.submit "Resend confirmation instructions", class: "btn btn-primary" %>
+        </div>
+      </div>    
+
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
