--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,12 @@
-<p>Welcome <%= @email %>!</p>
+<p>Welcome!</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>You need to confirm your account email through the link below:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @token) %></p>
+<br/>
+
+<p>
+ Thank you,<br/><br/>
+  Yourself<br/>
+  <%= link_to "Your URL", "#" %>
+</p>
