--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,19 +1,43 @@
-<h2>Change your password</h2>
+<div class="row">
+  <div class="col-sm-6 ">
+    <h1>Change your password</h1>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-    <%= devise_form_errors %>
+    <%= form_for(resource, :as => resource_name, 
+    :url => password_path(resource_name), 
+    :html => { :method => :put, :role => "form" }) do |f| %>
+  
+      <%= devise_form_errors %>
+  
+      <%= f.hidden_field :reset_password_token %>
+  
+      <div class="form-group">
+        <%= f.label :password, "New password" %>
+        <div class="row">
+          <div class="col-sm-6">
+            <%= f.password_field :password, class: "form-control" %>
+          </div>
+        </div>
+      </div>
 
-  <%= f.input :reset_password_token, as: :hidden %>
-  <%= f.full_error :reset_password_token %>
+      <div class="form-group">
+        <%= f.label :password_confirmation, "Confirm new password" %>
+        <div class="row">
+          <div class="col-sm-6">
+            <%= f.password_field :password_confirmation, class: "form-control" %>
+          </div>
+        </div>
+      </div>
+  
+      <div class="row">
+        <div class="col-sm-6">
+          <%= f.submit "Change my password", class: "btn btn-danger" %>
+        </div>
+      </div>    
 
-  <div class="form-inputs">
-    <%= f.input :password, label: "New password", required: true, autofocus: true %>
-    <%= f.input :password_confirmation, label: "Confirm your new password", required: true %>
+      
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
