--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,31 @@
-<h2>Forgot your password?</h2>
+<div class="row">
+  <div class="col-sm-6 ">
+    <h1>Forgot your password?</h1>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_form_errors %>
+    <%= form_for(resource, :as => resource_name, 
+    :url => password_path(resource_name), 
+    :html => { :method => :post, :role => "form" }) do |f| %>
+   
+      <%= devise_form_errors %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+
+      <div class="form-group">
+        <%= f.label :email %>
+        <div class="row">
+          <div class="col-sm-6">
+            <%= f.email_field :email, :autofocus => true, class: "form-control" %>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="col-sm-6">
+          <%= f.submit "Send me reset password instructions", class: "btn btn-primary" %>
+        </div>
+      </div>
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
