--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,12 +1,27 @@
-<%= simple_form_for(@project) do |f| %>
-  <%= form_errors @project %>
+<%= form_for(@project, role: "form") do |f| %>
+    <%= form_errors @project %>
 
-  <div class="form-inputs">
-    <%= f.input :name, required: true, autofocus: true %>
-    <%= f.input :description, required: true %>
-  </div>
+    <div class="form-group">
+      <%= f.label :name %>
+      <div class="row">
+        <div class="col-sm-6">
+          <%= f.text_field :name, class: "form-control", :autofocus => true %>
+        </div>
+      </div>
+    </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+    <div class="form-group">
+      <%= f.label :description %>
+      <div class="row">
+        <div class="col-sm-6">
+          <%= f.text_area :description, class: "form-control" %>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-6">
+        <%= f.submit nil, class: "btn btn-primary" %>
+      </div>
+    </div>
 <% end %>
