Ongoing development - hightlights: I18N-enabled the application; wrote a number of form helpers and reworked forms/pages to use them; extended the Projects model/view; worked on unit/functional tests; tested production mode with PostgreSQL; some UI/look&feel enhancements; introduced Paperclip for image uploads; security: took sensitive info out of database.yml

--- a/app/views/admin/posts/dashboard.html.erb
+++ b/app/views/admin/posts/dashboard.html.erb
@@ -1,4 +1,4 @@
-<% title("Posts Dashboard") %>
+<% page_title("Posts Dashboard") %>
 <h3 class="page-title">Posts <small>Dashboard</small></h3>
 <p><%= link_to "Back to Admin", admin_root_path %></p>
 <hr/>
