--- a/app/views/admin/posts/drafts.html.erb
+++ b/app/views/admin/posts/drafts.html.erb
@@ -1,4 +1,4 @@
-<% title("Post Drafts") %>
+<% page_title("Post Drafts") %>
 <h3 class="page-title">Posts <small>Drafts</small></h3>
 <p><%= link_to "Back to dashboard", admin_posts_dashboard_path %></p>
 <hr/>
