--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<% title("Edit #{@post.title}") %>
+<% page_title("Edit #{@post.title}") %>
 <h3 class="page-title">Edit post <small><%= @post.title %></small></h3>
 <p>
 	<%= link_to "Back to dashboard", admin_posts_dashboard_path %>
