--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -1,4 +1,4 @@
-<% title("New post") %>
+<% page_title("New post") %>
 <h3 class="page-title">Add a new post</h3>
 <p><%= link_to "Back to dashboard", admin_posts_dashboard_path %></p>
 <hr/>
