--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,4 +1,4 @@
-<% title("Users Admin") %>
+<% page_title("Users Admin") %>
 <h1>Users <small>Admin</small></h1>
 <p><%= link_to "Back to Admin", admin_root_path %></p>
 
