--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-6 ">
-    <h1>Edit your profile</h1>
+    <%= form_title("edit_profile") %>
 
     <%= form_for(resource, :as => resource_name, 
     :url => registration_path(resource_name), 
