--- a/app/views/layouts/_scripts.html.erb
+++ b/app/views/layouts/_scripts.html.erb
@@ -18,5 +18,9 @@
             $('html, body').animate({scrollTop : 0},800);
             return false;
         });
+
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        });
     });
 </script>
