--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,4 +1,4 @@
-<% title("Published posts") %>
+<% page_title("Published posts") %>
 <h3 class="page-title">Posts <small>Published</small></h3>
 <p><%= link_to "Back to dashboard", admin_posts_dashboard_path %></p>
 <hr/>
