--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-6">
-    <h1>Sign up</h1>
+    <%= form_title("sign_up") %>
 
     <%= form_for(resource, :as => resource_name, 
     :url => registration_path(resource_name), 
