--- a/app/views/pages/show_post.html.erb
+++ b/app/views/pages/show_post.html.erb
@@ -1,4 +1,4 @@
-<% title(@post.title) %>
+<% page_title(@post.title) %>
 
 <div class="row">
   <div class="col-sm-3"><h3><small><i class="fa fa-calendar"></i>&nbsp;&nbsp;<%= @post.updated_at.strftime("%Y, %B %-d") %></small></h3></div>
