--- a/assets/stylesheets/modules/_hero.scss
+++ b/assets/stylesheets/modules/_hero.scss
@@ -93,7 +93,14 @@ $call-to-action-font-size-small: 13px;
   //@include button-size($padding-large-vertical, $padding-large-horizontal, $font-size-large, $line-height-large, $border-radius-large);
   @include button-size($padding-small-vertical, $padding-small-horizontal, $call-to-action-font-size, $line-height-small, $border-radius-small);
   // increase width
-  width: 180px;
+  width: 160px;
+
+  // CSS transition effect from http://bootstrapbay.com/blog/css-transitions-buttons/
+  transition: all 0.6s ease 0.5s;
+
+  &:hover {
+    background: darkorange; /*#428BCA;*/  /*#CF4647;*/
+  }
 
   @media (max-width: $screen-sm-max) {
     // increase width
