Ongoing development - moved project pages to admin namespace

--- a/app/views/admin/base/index.html.erb
+++ b/app/views/admin/base/index.html.erb
@@ -4,7 +4,7 @@
   <div class="col-sm-4">
     <h3>Menu</h3>
     <h4><%= link_to "Users", admin_users_path %> <small>- <%= "#{pluralize(@count, 'user')}" %></small></h4>
-    <h4><%= link_to "Posts", admin_posts_dashboard_path %> <small>- <%= "#{pluralize(@post_count, 'post')}" %></small></h4>
+    <h4><%= link_to "Projects", admin_projects_path %> <small>- <%= "#{pluralize(@project_count, 'project')}" %></small></h4>
     <hr/>
   </div>
   
