--- a/app/views/admin/projects/new.html.erb
+++ b/app/views/admin/projects/new.html.erb
@@ -4,6 +4,6 @@
 
     <%= render 'form' %>
 
-    <%= link_to 'Back', projects_path %>
+    <%= link_to 'Back', admin_projects_path %>
   <!--/div>
 </div-->
