--- a/app/views/home/hero/_new_project_form.html.erb
+++ b/app/views/home/hero/_new_project_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_tag({controller: "projects", action: "new"}, method: "post", class: "form-inline",
+<%#= form_tag({controller: "projects", action: "new"}, method: "post", class: "form-inline",%>
+<%= form_tag(nil, method: "get", class: "form-inline",
              role: "form") do %>
 
     <div class="form-group hidden-xs">
