--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,4 +1,5 @@
 <% page_title("Edit User Id: #{@user.id}") %>
+
 <div class="row">
   <div class="col-sm-6">
     <h1>
@@ -61,6 +62,14 @@
     
     <% end %>
     <hr/>
-    <%= link_to "<i class='fa fa-minus-square'></i> Delete user".html_safe, admin_user_path(@user), method: :delete, data:{confirm: "Are you sure?"}, class: "btn btn-small btn-danger" %>
+
+    <% if @user.email != "admin@example.com" %>
+        <%= link_to "<i class='fa fa-minus-square'></i> Delete user".html_safe,
+                admin_user_path(@user),
+                method: :delete,
+                data:{confirm: "Are you sure?"},
+                class: "btn btn-small btn-danger" %>
+    <% end %>
+
   </div>
 </div>
