--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
       
       <div class="col-xs-12 text-center">
         <p><small>
-          &copy; 2015 - 4just1
+          &copy; 2015 - <%= ENV['APP_BRAND'] || "simplecrowd" %>
           <br/>
           Assembled with <%= link_to "RailsBricks", "http://www.railsbricks.net" %>
         </small></p>
