--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <!--meta name="description" content="Simple demo crowdfunding website" <meta name="author" content="leob"> <meta name="keywords" content="crowdfunding"-->
 
-  <title><%= @title || "Home" %> - 4just1.com</title>
+  <title><%= @title || "Home" %> - <%= ENV['APP_BRAND'] || "simplecrowd" %>.com</title>
 
   <%= favicon_link_tag 'favicon.ico' %>
   <%= favicon_link_tag 'apple-touch-icon.png', rel: 'apple-touch-icon', type: 'image/png' %>
