--- a/assets/stylesheets/theme/_styles.scss
+++ b/assets/stylesheets/theme/_styles.scss
@@ -60,8 +60,8 @@ h1, h2, h3 {
 }
 .tooltip-inner {
   color: #000;
-  background: #fff;
-  border: solid 1px #fff;
+  background: #fff4b3;
+  border: solid 1px #fff4b3;
 }
 
 // Copied from yeti/_bootswatch.scss
