--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,15 @@
   <%= favicon_link_tag 'apple-touch-icon.png', rel: 'apple-touch-icon', type: 'image/png' %>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => false %>
 
+  <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script>
+  <script>
+      WebFont.load({
+        google: {
+          families: ['Open Sans', 'Helvetica Neue']
+        }
+      });
+  </script>
+
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
