ongoing development: project search etc

--- a/app/views/home/hero/_hero_unit.html.erb
+++ b/app/views/home/hero/_hero_unit.html.erb
@@ -1,5 +1,5 @@
 <%# 'region' is for ARIA see: https://dequeuniversity.com/assets/html/jquery-summit/html5/slides/landmarks.html %>
-<div class="section" role="region" *>
+<div class="section" role="region">
   <div class="hero-unit">
 
     <div class="content-container">
