--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -7,7 +7,7 @@
     <%= form_text_field(f, :name, field_options: {autofocus: true, maxlength: 50, size: 50}) %>
 
     <%= form_group(f, :category) do %>
-        <%= f.collection_select :category_id, Category.all, :id, :name_en, prompt: "-- Please select --" %>
+        <%= f.collection_select :category_id, @categories, :id, :name, prompt: "-- Please select --" %>
     <% end %>
 
     <%= form_group(f, :target_amount) do %>
