fixed: centering of project blocks on XS-screens; added (via bower) X-Editable component

--- a/app/views/projects/_block.html.erb
+++ b/app/views/projects/_block.html.erb
@@ -1,4 +1,4 @@
-<div class="project-block">
+<div class="project-block center-block">
   <div class="project-block-thumbnail"> <!--img-thumbnail img-responsive"-->
     <%#
         We use: "image_tag project.main_image.url", which is the same as: "image_tag project.main_image.url :prethumb".
