--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8">
   <%# don't use minimum/maximum-scale, bad for accessibility, see: http://a11yproject.com/posts/never-use-maximum-scale
   <%#meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"%>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <%# <!-- meta tags -->
     <meta name="description" content="Simple demo crowdfunding website">
     <meta name="author" content="leob">
@@ -47,13 +47,20 @@
 <body data-no-turbolink>
 
 <div id="wrap">
+  <%#
+      ARIA skip nav links technique, see:
+        http://getbootstrap.com/getting-started/#accessibility
+        http://a11yproject.com/posts/skip-nav-links/
+  %>
+  <!--<a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>-->
+
   <%# 'banner' is for ARIA see: https://dequeuniversity.com/assets/html/jquery-summit/html5/slides/landmarks.html %>
   <header role="banner">
     <%= render 'layouts/navbar' %>
   </header>
 
   <%# 'main' is for ARIA see: https://dequeuniversity.com/assets/html/jquery-summit/html5/slides/landmarks.html %>
-  <div class="container-fluid" role="main">
+  <div class="container-fluid" role="main" id="content" tabindex="-1">
 
     <% if content_for?(:wide_content) %>
         <%= yield :wide_content %>
